--- a/htmlass2.html
+++ b/htmlass2.html
@@ -2,23 +2,18 @@
 <html>
 <head>
 	<title></title>
+
+<link rel="stylesheet" type="text/css" href="assets/css/htmlass2.css">
 	<style >
 
-		#h1{
 
-			text-decoration-color: red;
-
-		}
-		#ul{
-			text-decoration-color: green;
-		}
 	</style>
 </head>
 <body>
 <h1 id="h1">Hello,Nyros!</h1>
-<ul >
-<li id="ul">javascript</li>
-<li>Angular.js</li>
+<ul id="ul">
+<li >javascript</li>
+<li >Angular.js</li>
 <li >Ruby</li>
 </ul>
 </body>
